UPDATE: subiendo archivos

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animejs": "^3.2.1",
     "gsap": "^3.10.3",
     "handsfree": "^8.5.1",
+    "party-js": "^2.1.2",
     "pinia": "^2.0.13",
     "soundjs": "^1.0.1",
     "vue": "^3.2.31",
