--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pinia-plugin-persistedstate": "^1.5.1",
     "please-rotate": "^1.0.1",
     "prettier": "^2.5.1",
+    "sass": "^1.58.1",
     "soundjs": "^1.0.1",
     "stylus": "^0.58.1",
     "stylus-loader": "^3.0.2",
